--- a/templates/react-javascript/src/index.css
+++ b/templates/react-javascript/src/index.css
@@ -46,6 +46,12 @@ body {
   width: 100%;
 }
 
+@media (max-width: 63.99em) {
+  .header-logo {
+    max-width: 110px;
+  }
+}
+
 @media (min-width: 64em) {
   .usa-nav__primary button[aria-expanded=false] span:after {
       background: white;
