--- a/templates/react-javascript/index.html
+++ b/templates/react-javascript/index.html
@@ -10,6 +10,8 @@
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+      Note: Using .json instead of .webmanifest for compatibility with the RADFish theme plugin,
+      which generates manifest.json dynamically in dev and at build time.
     -->
     <link rel="manifest" href="/manifest.json" />
     <title>RADFish</title>
